<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.FragmentAddCity">

    <TextView
        android:id="@+id/textTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/dialog_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/city_name"
        style="@style/date"
        app:layout_constraintStart_toStartOf="@id/textTitleView"
        app:layout_constraintTop_toBottomOf="@id/textTitleView" />

    <EditText
        android:id="@+id/editTextCityName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/purple_500"
        android:hint="@string/city_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textTitleView"
        app:layout_constraintTop_toBottomOf="@id/textViewCityName" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:paddingBottom="16dp"
        android:text="@string/cancel"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/button_ok"
        app:layout_constraintTop_toBottomOf="@id/editTextCityName" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:paddingBottom="16dp"
        android:text="@string/ok"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextCityName" />
</androidx.constraintlayout.widget.ConstraintLayout>